--- a/generation/models/pix2pix/gen_T1_from_T1c.ipynb
+++ b/generation/models/pix2pix/gen_T1_from_T1c.ipynb
@@ -35,22 +35,11 @@
       "name": "gen_T1_from_T1c.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "machine_shape": "hm",
-      "include_colab_link": true
+      "machine_shape": "hm"
     },
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/EmanuelAlogna/BrainMRI-generation-using-GANs/blob/master/generation/models/pix2pix/gen_T1_from_T1c.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -1114,11 +1103,11 @@
         "            train_step(input_image, target)\n",
         "        ########################### ALL THIS BLOCK IS TO VALIDATE THE RESULTS (and plot them) ##########\n",
         "        if tf.equal(tumor_area, True) and tf.equal(loss, False):\n",
-        "            psnr, mse, ssim, psnr_tumor, mse_tumor, ssim_tumor = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss, epoch+1)\n",
+        "            psnr, mse, ssim, psnr_tumor, mse_tumor, ssim_tumor = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss)\n",
         "        elif tf.equal(tumor_area, False) and tf.equal(loss, True):\n",
-        "            psnr, mse, ssim, g_loss, d_loss = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss, epoch+1)\n",
+        "            psnr, mse, ssim, g_loss, d_loss = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss)\n",
         "        elif tf.equal(tumor_area, True) and tf.equal(loss, True):\n",
-        "            psnr, mse, ssim, psnr_tumor, mse_tumor, ssim_tumor, g_loss, d_loss = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss, epoch+1)\n",
+        "            psnr, mse, ssim, psnr_tumor, mse_tumor, ssim_tumor, g_loss, d_loss = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss)\n",
         "        else: \n",
         "            psnr, mse, ssim = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss)\n",
         "        psnr_to_plot = psnr_to_plot.write(epoch+1, psnr)\n",
