--- a/generation/models/pix2pix/gen_T2_from_T1.ipynb
+++ b/generation/models/pix2pix/gen_T2_from_T1.ipynb
@@ -78,7 +78,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -665,7 +665,7 @@
         "    std = tf.math.reduce_std(tf.boolean_mask((psnr_per_image), tf.math.is_finite(psnr_per_image)))\n",
         "    return mean, std, psnr_per_image"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1103,11 +1103,11 @@
         "            train_step(input_image, target)\n",
         "        ########################### ALL THIS BLOCK IS TO VALIDATE THE RESULTS (and plot them) ##########\n",
         "        if tf.equal(tumor_area, True) and tf.equal(loss, False):\n",
-        "            psnr, mse, ssim, psnr_tumor, mse_tumor, ssim_tumor = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss, epoch+1)\n",
+        "            psnr, mse, ssim, psnr_tumor, mse_tumor, ssim_tumor = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss)\n",
         "        elif tf.equal(tumor_area, False) and tf.equal(loss, True):\n",
-        "            psnr, mse, ssim, g_loss, d_loss = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss, epoch+1)\n",
+        "            psnr, mse, ssim, g_loss, d_loss = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss)\n",
         "        elif tf.equal(tumor_area, True) and tf.equal(loss, True):\n",
-        "            psnr, mse, ssim, psnr_tumor, mse_tumor, ssim_tumor, g_loss, d_loss = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss, epoch+1)\n",
+        "            psnr, mse, ssim, psnr_tumor, mse_tumor, ssim_tumor, g_loss, d_loss = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss)\n",
         "        else: \n",
         "            psnr, mse, ssim = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss)\n",
         "        psnr_to_plot = psnr_to_plot.write(epoch+1, psnr)\n",
