gen T1c using T1, T2 and T2flair

--- a/generation/models/MI_pix2pix/gen_T1c.ipynb
+++ b/generation/models/MI_pix2pix/gen_T1c.ipynb
@@ -80,7 +80,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 99,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -867,7 +867,7 @@
         "generator = Generator()\n",
         "generator.summary()"
       ],
-      "execution_count": 120,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1010,7 +1010,7 @@
         "discriminator = Discriminator()\n",
         "discriminator.summary()"
       ],
-      "execution_count": 123,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1122,7 +1122,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 125,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1260,11 +1260,11 @@
         "            train_step(t1, t2, t1c, t2flair)\n",
         "        ########################### ALL THIS BLOCK IS TO VALIDATE THE RESULTS (and plot them) ##########\n",
         "        if tf.equal(tumor_area, True) and tf.equal(loss, False):\n",
-        "            psnr, mse, ssim, psnr_tumor, mse_tumor, ssim_tumor = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss, epoch+1)\n",
+        "            psnr, mse, ssim, psnr_tumor, mse_tumor, ssim_tumor = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss)\n",
         "        elif tf.equal(tumor_area, False) and tf.equal(loss, True):\n",
-        "            psnr, mse, ssim, g_loss, d_loss = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss, epoch+1)\n",
+        "            psnr, mse, ssim, g_loss, d_loss = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss)\n",
         "        elif tf.equal(tumor_area, True) and tf.equal(loss, True):\n",
-        "            psnr, mse, ssim, psnr_tumor, mse_tumor, ssim_tumor, g_loss, d_loss = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss, epoch+1)\n",
+        "            psnr, mse, ssim, psnr_tumor, mse_tumor, ssim_tumor, g_loss, d_loss = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss)\n",
         "        else: \n",
         "            psnr, mse, ssim = evaluate_GAN(generator, val_ds, 'validation', tumor_area, loss)\n",
         "        psnr_to_plot = psnr_to_plot.write(epoch+1, psnr)\n",
