--- a/generation/experiments/internal_connections_analysis.ipynb
+++ b/generation/experiments/internal_connections_analysis.ipynb
@@ -514,7 +514,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Evaluate GAN (MI-GAN - modified version)"
+        "## Evaluate GAN (MI-GAN)"
       ]
     },
     {
@@ -1225,17 +1225,13 @@
         "colab": {}
       },
       "source": [
-        "def Discriminator2(modified_version=True):\n",
+        "def Discriminator2():\n",
         "    initializer = tf.random_normal_initializer(0., 0.02)\n",
         "\n",
-        "    if modified_version:\n",
-        "        inp = tf.keras.layers.Input(shape=[256, 256, 3], name='input_image', batch_size=BATCH_SIZE)\n",
-        "        tar = tf.keras.layers.Input(shape=[256, 256, 1], name='target_image', batch_size=BATCH_SIZE)\n",
-        "        OUTPUT_CHANNELS = 1\n",
-        "    else:\n",
-        "        inp = tf.keras.layers.Input(shape=[256, 256, 4], name='input_image', batch_size=BATCH_SIZE)\n",
-        "        tar = tf.keras.layers.Input(shape=[256, 256, 4], name='target_image', batch_size=BATCH_SIZE)\n",
-        "        OUTPUT_CHANNELS = 4\n",
+        "    inp = tf.keras.layers.Input(shape=[256, 256, 3], name='input_image', batch_size=BATCH_SIZE)\n",
+        "    tar = tf.keras.layers.Input(shape=[256, 256, 1], name='target_image', batch_size=BATCH_SIZE)\n",
+        "    OUTPUT_CHANNELS = 1\n",
+        "   \n",
         "    x = tf.keras.layers.concatenate([inp, tar]) # (bs, 256, 256, 4*2)\n",
         "\n",
         "    down1 = discriminator_block(8, 4, False)(x) # (bs, 128, 128, 64)\n",
@@ -1394,7 +1390,7 @@
         "    print(alpha)\n",
         "\n",
         "    generator = Generator2(alpha)\n",
-        "    discriminator = Discriminator2(modified_version=True)\n",
+        "    discriminator = Discriminator2()\n",
         "    generator_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)\n",
         "    discriminator_optimizer = tf.keras.optimizers.Adam(2e-4, beta_1=0.5)\n",
         "\n",
