--- a/generation/models/MI_GAN/gen_T2.ipynb
+++ b/generation/models/MI_GAN/gen_T2.ipynb
@@ -80,7 +80,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 103,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +102,8 @@
       "source": [
         "import sys\n",
         "sys.path.append('./drive/My Drive/Master_thesis/generation')\n",
-        "from dataset_helpers import load_dataset"
+        "from dataset_helpers import load_dataset\n",
+        "from evaluation_metrics import compute_psnr, compute_ssim, compute_mse, compute_mse_tumor, compute_psnr_tumor"
       ],
       "execution_count": 0,
       "outputs": []
@@ -562,143 +563,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QIl04K0PMurE",
-        "colab_type": "text"
-      },
-      "source": [
-        "##Defining all the quantitative metrics (PSNR, SSIM and MSE)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BUtrXxJe3Xvc",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def compute_psnr(image1, image2):\n",
-        "    # Compute PSNR over tf.float32 Tensors.\n",
-        "    im1 = tf.image.convert_image_dtype(image1, tf.float32)   # inp is a numpy.ndarray and im1 is an EagerTensor\n",
-        "    im2 = tf.image.convert_image_dtype(image2, tf.float32)\n",
-        "    psnr = tf.image.psnr(im1, im2, max_val=1.0)\n",
-        "    mean = tf.reduce_mean(tf.boolean_mask((psnr), tf.math.is_finite(psnr)))\n",
-        "    std = tf.math.reduce_std(tf.boolean_mask((psnr), tf.math.is_finite(psnr)))\n",
-        "    # In the computation of mean and std, I'm ignoring the 'nan' and 'inf' values\n",
-        "    # Why 'nan' values? 'nan' happens when there is an image with max_value and min_value = 0.0 so a black image\n",
-        "    # the PSNR would be inf (image is totally similar to the ground truth)\n",
-        "    # be rescaling the image, the max_value and min_value would become nan and so the PSNR\n",
-        "\n",
-        "    # It ignores also the 'inf' values, in the case I don't want to normalize\n",
-        "    \n",
-        "    return mean, std, psnr"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "v0kHZvJ6LhG3",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def compute_ssim(image1, image2):\n",
-        "    im1 = tf.image.convert_image_dtype(image1, tf.float32)   # inp is a numpy.ndarray and im1 is an EagerTensor\n",
-        "    im2 = tf.image.convert_image_dtype(image2, tf.float32)\n",
-        "    ssim = tf.image.ssim(im1, im2, max_val=1)\n",
-        "    mean = tf.reduce_mean(tf.boolean_mask((ssim), tf.math.is_finite(ssim)))\n",
-        "    std = tf.math.reduce_std(tf.boolean_mask((ssim), tf.math.is_finite(ssim)))\n",
-        "    #print(ssim)\n",
-        "    return mean, std, ssim"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "I_kkj3HwPtK5",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# I want to compute, first thing, the MSE between ground truth and generated one. The tf.function gives me a Tensor 32x256x256:\n",
-        "# MSE is computed PIXEL per PIXEL, so per each of the 32 matrix 256x256, I average (1) the values of the 256x256 pixels obtaining\n",
-        "# an array of 32 elements, containing the MSEs of each image belonging to the batch. Then I can average (2) these 32 to have \n",
-        "# I should not average the whole 32x256x256 in one step. The result would have same mean but slightly different std.\n",
-        "# I want first to obtain the MSE of each image... then I average across the batch only to have smth more accurate.\n",
-        "\n",
-        "def compute_mse(image1, image2):       # mean squared error\n",
-        "    im1 = tf.image.convert_image_dtype(image1, tf.float32)   # inp is a numpy.ndarray and im1 is an EagerTensor\n",
-        "    im2 = tf.image.convert_image_dtype(image2, tf.float32)\n",
-        "    mse = tf.metrics.mean_squared_error(im1,im2)\n",
-        "    # In this way is possible to do Variable item-assignment with tensors \n",
-        "    mse_per_image = tf.TensorArray(tf.float32, size=BATCH_SIZE)\n",
-        "    for i in range(BATCH_SIZE):\n",
-        "        x = tf.reduce_mean(tf.boolean_mask((mse[i]), tf.math.is_finite(mse[i]))) \n",
-        "        mse_per_image = mse_per_image.write(i, x)\n",
-        "    mse_per_image = mse_per_image.stack()\n",
-        "    mean = tf.reduce_mean(tf.boolean_mask((mse_per_image), tf.math.is_finite(mse_per_image)))\n",
-        "    std = tf.math.reduce_std(tf.boolean_mask((mse_per_image), tf.math.is_finite(mse_per_image)))\n",
-        "    return mean, std, mse_per_image"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uTnT4_Qpb1aj",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from tensorflow.python.ops import math_ops\n",
-        "\n",
-        "def compute_mse_tumor(image1, image2):       # mean squared error\n",
-        "    im1 = tf.image.convert_image_dtype(image1, tf.float32)   # inp is a numpy.ndarray and im1 is an EagerTensor\n",
-        "    im2 = tf.image.convert_image_dtype(image2, tf.float32)\n",
-        "    squared_difference = tf.math.squared_difference(im1,im2)\n",
-        "    mse_per_image = tf.TensorArray(tf.float32, size=BATCH_SIZE)\n",
-        "    for i in range(BATCH_SIZE):\n",
-        "        non_zero_elements = tf.math.count_nonzero(squared_difference[i], dtype=tf.dtypes.float32)\n",
-        "        sum_over_squared_difference = tf.math.reduce_sum(squared_difference[i])\n",
-        "        x = tf.math.divide(sum_over_squared_difference, non_zero_elements) \n",
-        "\n",
-        "        mse_per_image = mse_per_image.write(i, x)\n",
-        "    mse_per_image = mse_per_image.stack()\n",
-        "    mean = tf.reduce_mean(tf.boolean_mask((mse_per_image), tf.math.is_finite(mse_per_image)))\n",
-        "    std = tf.math.reduce_std(tf.boolean_mask((mse_per_image), tf.math.is_finite(mse_per_image)))\n",
-        "    return mean, std, mse_per_image\n",
-        "\n",
-        "\n",
-        "def compute_psnr_tumor(image1, image2):\n",
-        "    max_val=1.0\n",
-        "    im1 = tf.image.convert_image_dtype(image1, tf.float32)\n",
-        "    im2 = tf.image.convert_image_dtype(image2, tf.float32)\n",
-        "    squared_difference = tf.math.squared_difference(im1,im2)\n",
-        "    psnr_per_image = tf.TensorArray(tf.float32, size=BATCH_SIZE)\n",
-        "    for i in range(BATCH_SIZE):\n",
-        "        non_zero_elements = tf.math.count_nonzero(squared_difference[i], dtype=tf.dtypes.float32)\n",
-        "        sum_over_squared_difference = tf.math.reduce_sum(squared_difference[i])\n",
-        "        x = tf.math.divide(sum_over_squared_difference, non_zero_elements) \n",
-        "        \n",
-        "        psnr_val = math_ops.subtract(20 * math_ops.log(max_val) / math_ops.log(10.0), np.float32(10 / np.log(10)) * math_ops.log(x), name='psnr')\n",
-        "        psnr_per_image = psnr_per_image.write(i, psnr_val)\n",
-        "\n",
-        "    psnr_per_image = psnr_per_image.stack()\n",
-        "    mean = tf.reduce_mean(tf.boolean_mask((psnr_per_image), tf.math.is_finite(psnr_per_image)))\n",
-        "    std = tf.math.reduce_std(tf.boolean_mask((psnr_per_image), tf.math.is_finite(psnr_per_image)))\n",
-        "    return mean, std, psnr_per_image"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "0-eVgrZJBpZ2",
         "colab_type": "text"
       },
@@ -923,7 +787,7 @@
         "discriminator = Discriminator()\n",
         "discriminator.summary()"
       ],
-      "execution_count": 126,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -975,7 +839,7 @@
         "generator = Generator()\n",
         "generator.summary()"
       ],
-      "execution_count": 127,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1169,7 +1033,7 @@
         "    print ('Latest checkpoint restored!!')\n",
         "\"\"\""
       ],
-      "execution_count": 132,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
