generate a tf.record with the predictions

--- a/generation/generate_images_to_segment.ipynb
+++ b/generation/generate_images_to_segment.ipynb
@@ -35,6 +35,7 @@
       "name": "generate_images_to_segment.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "machine_shape": "hm"
     },
     "accelerator": "GPU"
@@ -55,10 +56,10 @@
       "metadata": {
         "id": "ngnfgyxdgvDv",
         "colab_type": "code",
-        "outputId": "b8a473d2-dfd4-41f0-faa7-6f57fa328ef0",
+        "outputId": "df59da6a-6ef1-4aad-baa8-29466b06b9f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 139
+          "height": 71
         }
       },
       "source": [
@@ -84,17 +85,13 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "2.2.0-rc3\n",
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -137,7 +134,7 @@
         "def load_datasets():\n",
         "    validation = load_dataset(prefix_path + 'brats2015_validation_crop_mri.tfrecords', ['MR_T1', 'MR_T1c', 'MR_T2', 'MR_Flair'], batch_size=BATCH_SIZE, shuffle=False)\n",
         "    training = load_dataset(prefix_path + 'brats2015_training_crop_mri.tfrecords', ['MR_T1', 'MR_T1c', 'MR_T2', 'MR_Flair'], batch_size=BATCH_SIZE, shuffle=True)\n",
-        "    testing = load_dataset(prefix_path + 'brats2015_testing_crop_mri.tfrecords', ['MR_T1', 'MR_T1c', 'MR_T2', 'MR_Flair'], batch_size=BATCH_SIZE, shuffle=True)\n",
+        "    testing = load_dataset(prefix_path + 'brats2015_testing_crop_mri.tfrecords', ['MR_T1', 'MR_T1c', 'MR_T2', 'MR_Flair'], batch_size=BATCH_SIZE, shuffle=False)\n",
         "    return training, validation , testing"
       ],
       "execution_count": 0,
@@ -174,73 +171,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MDybqCIjhEtp",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def resize_with_crop(*args): # possibile arguments: input, gt, prediction and maybe the segmentation\n",
-        "\n",
-        "    image0 = tf.image.resize_with_crop_or_pad(args[0], 155, 194)\n",
-        "    image1 = tf.image.resize_with_crop_or_pad(args[1], 155, 194)\n",
-        "    image2 = tf.image.resize_with_crop_or_pad(args[2], 155, 194)\n",
-        "    image3 = tf.image.resize_with_crop_or_pad(args[3], 155, 194)\n",
-        "    if len(args) == 5:      # crop also the segmentation, if is given as additional argument\n",
-        "        image4 = tf.image.resize_with_crop_or_pad(args[4], 155, 194)\n",
-        "        return image0, image1, image2, image3, image4\n",
-        "    if len(args) == 7:      # crop also the segmentation, if is given as additional argument\n",
-        "        image4 = tf.image.resize_with_crop_or_pad(args[4], 155, 194)\n",
-        "        image5 = tf.image.resize_with_crop_or_pad(args[5], 155, 194)\n",
-        "        image6 = tf.image.resize_with_crop_or_pad(args[6], 155, 194)\n",
-        "        return image0, image1, image2, image3, image4, image5, image6\n",
-        "    if len(args) == 8:      # crop also the segmentation, if is given as additional argument\n",
-        "        image4 = tf.image.resize_with_crop_or_pad(args[4], 155, 194)\n",
-        "        image5 = tf.image.resize_with_crop_or_pad(args[5], 155, 194)\n",
-        "        image6 = tf.image.resize_with_crop_or_pad(args[6], 155, 194)\n",
-        "        image7 = tf.image.resize_with_crop_or_pad(args[7], 155, 194)\n",
-        "        return image0, image1, image2, image3, image4, image5, image6, image7\n",
-        "    return image0, image1, image2, image3"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "R0DtPOglvkn_",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# MASK THE SEGMENTATION with the prediciton and the ground_truth and then compute the metrics (even if there is the black pixels\n",
-        "# it should give me an idea about how much is going the generation of the tumor during the generation. of course the score\n",
-        "# will be influeced (biased) by all the black pixels.)\n",
-        "\n",
-        "def retrieve_tumor_area(*args):  # ground_truth, prediction1, prediction2, segmentation, prediction3*\n",
-        "    ground_truth_np = args[0].numpy()\n",
-        "    prediction1_np = args[1].numpy()\n",
-        "    prediction2_np = args[2].numpy()\n",
-        "    segmentation_np = args[3].numpy()\n",
-        "    if len(args) == 5:\n",
-        "        prediction3_np = args[4].numpy()\n",
-        "    \n",
-        "    # I want to remove all the pixels not relevant wrt the tumor area. \n",
-        "    idx = (segmentation_np==0)      \n",
-        "    ground_truth_np[idx] = segmentation_np[idx]\n",
-        "    prediction1_np[idx] = segmentation_np[idx]\n",
-        "    prediction2_np[idx] = segmentation_np[idx]\n",
-        "    if len(args) == 5:\n",
-        "        prediction3_np[idx] = segmentation_np[idx]\n",
-        "        return ground_truth_np, prediction1_np, prediction2_np, prediction3_np\n",
-        "\n",
-        "    return ground_truth_np, prediction1_np, prediction2_np      # Now the images are ready to be evaluated"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "SpjoCmCX-4uy",
         "colab_type": "code",
         "colab": {}
@@ -251,7 +181,7 @@
         "def plot_images_new(*args, gen_t1): \n",
         "    \n",
         "    if len(args) == 5:\n",
-        "        display_list = [args[0], args[1], args[2], args[3], args[4]]   # input, gt, prediction, gt masked, pred masked\n",
+        "        display_list = [args[0], args[1], args[2], args[3], args[4]]\n",
         "        title = ['Tflair', 'P2P_pred', 'MIP2P_pred', 'MIGAN_pred', 'Ground truth']\n",
         "        figsize = (14, 7)\n",
         "    elif len(args) == 3:\n",
@@ -261,7 +191,7 @@
         "\n",
         "    plt.figure(1 , figsize)\n",
         "    n = 0\n",
-        "    for i in range(len(args)):    # batch size is different from 10, but let's show just 10 images.\n",
+        "    for i in range(len(args)):\n",
         "        n += 1\n",
         "        plt.subplot(1, len(args), n).title.set_text(title[i])\n",
         "        plt.subplot(1, len(args), n).title.set_size(16)\n",
@@ -269,72 +199,6 @@
         "        plt.axis('off')\n",
         "    plt.subplots_adjust(left=0, bottom=None, right=0.75, top=None, wspace=0.0, hspace=None)\n",
         "    plt.show()\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "k4LLqv4puYxn",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def mean_rescale(x, xmin, xmax):\n",
-        "    mean = tf.reduce_mean(x)\n",
-        "    return ((x-mean)/(xmax-xmin)) "
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9I9cJ9_iubPK",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "@tf.function\n",
-        "def mean_normalize(image):\n",
-        "    image_normalized = tf.TensorArray(tf.float32, size=BATCH_SIZE)\n",
-        "    for i in range(BATCH_SIZE):\n",
-        "        # rescaling each image in the batch\n",
-        "        max_value = tf.math.reduce_max(image[i])\n",
-        "        min_value = tf.math.reduce_min(image[i])\n",
-        "        x = mean_rescale(image[i], min_value, max_value)\n",
-        "        image_normalized = image_normalized.write(i, x)\n",
-        "    image_normalized = image_normalized.stack()\n",
-        "    return image_normalized"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "R3RkK4z0ug06",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def black_images_to_nan(image): \n",
-        "    image_normalized = tf.TensorArray(tf.float32, size=BATCH_SIZE)\n",
-        "    for i in range(BATCH_SIZE):\n",
-        "        # rescaling each image in the batch\n",
-        "        max_value = tf.math.reduce_max(image[i])\n",
-        "        min_value = tf.math.reduce_min(image[i])\n",
-        "\n",
-        "        # if the max = min most likely it's a black image (or an image without any important information)\n",
-        "        if tf.math.equal(max_value, min_value):        \n",
-        "            print(\"I found a black image! at index {}\".format(i))\n",
-        "            x = mean_normalize(image[i], min_value, max_value)\n",
-        "            image_normalized = image_normalized.write(i, x)\n",
-        "        else:\n",
-        "            image_normalized = image_normalized.write(i, image[i])\n",
-        "    image_normalized = image_normalized.stack()\n",
-        "    return image_normalized"
       ],
       "execution_count": 0,
       "outputs": []
@@ -393,7 +257,11 @@
       "metadata": {
         "id": "L_YKrhhoOEu7",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "66b5003e-ae26-403b-e213-18f86d92677f"
       },
       "source": [
         "\"\"\"idx = 0\n",
@@ -412,8 +280,21 @@
         "\n",
         "print(prediction.shape)\"\"\""
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'idx = 0\\nfor raw_record in testing.take(3):\\n    t1, t2, t1c, tflair, ground_truth = take_images_from_raw(raw_record, ot=True)\\n\\n    multi_input = tf.concat([t1, t2, tflair], 3)\\n\\n    prediction1 = pix2pix_t1c(t1, training=False)\\n    prediction2 = MI_GAN_t1c(multi_input, training=False)\\n    prediction3 = MI_pix2pix_t1c(multi_input, training=False)\\n    if idx == 2:\\n        plot_images_new(t1c, prediction1, gen_t1=True)\\n\\n    idx += 1\\n\\nprint(prediction.shape)'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -430,7 +311,11 @@
       "metadata": {
         "id": "Ibj0EqImX9xZ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "fc023ccb-4751-4dec-d845-851ed3729399"
       },
       "source": [
         "\"\"\"outfile = 'drive/My Drive/MRI-generation/batch_from_pix2pix_t1c'\n",
@@ -442,8 +327,21 @@
         "outfile = 'drive/My Drive/MRI-generation/batch_from_MIpix2pix_t1c'\n",
         "np.save(outfile, prediction3)\"\"\""
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"outfile = 'drive/My Drive/MRI-generation/batch_from_pix2pix_t1c'\\nnp.save(outfile, prediction1)\\n\\noutfile = 'drive/My Drive/MRI-generation/batch_from_MIGAN_t1c'\\nnp.save(outfile, prediction2)\\n\\noutfile = 'drive/My Drive/MRI-generation/batch_from_MIpix2pix_t1c'\\nnp.save(outfile, prediction3)\""
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -476,14 +374,6 @@
         "colab": {}
       },
       "source": [
-        "def crop(*args):\n",
-        "    image0 = tf.image.resize_with_crop_or_pad(args[0], 256, 256)\n",
-        "    image1 = tf.image.resize_with_crop_or_pad(args[1], 256, 256)\n",
-        "    image2 = tf.image.resize_with_crop_or_pad(args[2], 256, 256)\n",
-        "    image3 = tf.image.resize_with_crop_or_pad(args[3], 256, 256)\n",
-        "    image4 = tf.image.resize_with_crop_or_pad(args[4], 256, 256)\n",
-        "    return image0, image1, image2, image3, image4\n",
-        "\n",
         "def _bytes_feature(value):\n",
         "    return tf.train.Feature(bytes_list=tf.train.BytesList(value=[value]))\n",
         "\n",
@@ -535,9 +425,8 @@
         "            migan = tf.concat([partA3, partB3, partC3, partD3], axis=0)\n",
         "            tflair = tf.concat([tfA, tfB, tfC, tfD], axis=0)\n",
         "            gt = tf.concat([gtA, gtB, gtC, gtD], axis=0)\n",
+        "            print(p2p.shape)\n",
         "            print(idx.numpy())\n",
-        "            \n",
-        "            tflair, p2p, mip2p, migan, gt = crop(tflair, p2p, mip2p, migan, gt)\n",
         "            for i in range(128):\n",
         "                \n",
         "                tflair_slice = ((tf.squeeze(tflair[i])).numpy()).tostring()\n",
@@ -572,8 +461,6 @@
         "    batch = tf.io.decode_raw(batch, tf.float32)\n",
         "    batch = tf.reshape(batch, (1, 256, 256))\n",
         "    batch = tf.squeeze(batch)\n",
-        "    #paddings = tf.constant([[0, 0], [38, 38], [38, 38]])\n",
-        "    #batch = tf.pad(batch, paddings, \"CONSTANT\", constant_values=0)\n",
         "    batch = tf.expand_dims(batch, axis=2)\n",
         "    return batch\n",
         "\n",
@@ -652,15 +539,83 @@
       "metadata": {
         "id": "izK_ZuedxJuy",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 986
+        },
+        "outputId": "db9c6f81-9597-4360-ca31-f813f0d78d61"
       },
       "source": [
-        "output_dir = './drive/My Drive/Master_thesis/segmentation/{}.tfrecords'.format(\"generated_testing_256_mri\")\n",
+        "output_dir = './drive/My Drive/Master_thesis/segmentation/{}.tfrecords'.format(\"generated_testing_mri\")\n",
         "\n",
         "write_tfrecord(pix2pix_tflair, MIpix2pix_flair, MIGAN_flair, testing, output_dir)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(128, 256, 256, 1)\n",
+            "3\n",
+            "(128, 256, 256, 1)\n",
+            "7\n",
+            "(128, 256, 256, 1)\n",
+            "11\n",
+            "(128, 256, 256, 1)\n",
+            "15\n",
+            "(128, 256, 256, 1)\n",
+            "19\n",
+            "(128, 256, 256, 1)\n",
+            "23\n",
+            "(128, 256, 256, 1)\n",
+            "27\n",
+            "(128, 256, 256, 1)\n",
+            "31\n",
+            "(128, 256, 256, 1)\n",
+            "35\n",
+            "(128, 256, 256, 1)\n",
+            "39\n",
+            "(128, 256, 256, 1)\n",
+            "43\n",
+            "(128, 256, 256, 1)\n",
+            "47\n",
+            "(128, 256, 256, 1)\n",
+            "51\n",
+            "(128, 256, 256, 1)\n",
+            "55\n",
+            "(128, 256, 256, 1)\n",
+            "59\n",
+            "(128, 256, 256, 1)\n",
+            "63\n",
+            "(128, 256, 256, 1)\n",
+            "67\n",
+            "(128, 256, 256, 1)\n",
+            "71\n",
+            "(128, 256, 256, 1)\n",
+            "75\n",
+            "(128, 256, 256, 1)\n",
+            "79\n",
+            "(128, 256, 256, 1)\n",
+            "83\n",
+            "(128, 256, 256, 1)\n",
+            "87\n",
+            "(128, 256, 256, 1)\n",
+            "91\n",
+            "(128, 256, 256, 1)\n",
+            "95\n",
+            "(128, 256, 256, 1)\n",
+            "99\n",
+            "(128, 256, 256, 1)\n",
+            "103\n",
+            "(128, 256, 256, 1)\n",
+            "107\n",
+            "(128, 256, 256, 1)\n",
+            "111\n",
+            "Total time: 90.45329093933105\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -675,12 +630,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gnh22LaO9bdr",
+        "id": "hFTuQePriFip",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "generated_dataset = retrieve_dataset('./drive/My Drive/Master_thesis/segmentation/generated_testing_norm_mri.tfrecords', shuffle=False)"
+        "generated_dataset = retrieve_dataset('./drive/My Drive/Master_thesis/segmentation/generated_testing_mri.tfrecords', shuffle=False)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -705,7 +660,7 @@
         "    #print(min_value.numpy(), max_value.numpy(), (max_value-min_value).numpy())\n",
         "    plot_images_new(tflair, p2p_pred, mip2p_pred, migan_pred, gt, gen_t1=True)"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
